--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -66,6 +66,31 @@ body {
       font-size: 32px;
       color: #c92228;
     }
+    .simple-button {
+      position: absolute;
+      background: #FDFDFD;
+      color: @retrored;
+      border: 2px solid #EB5858;
+      border-color: rgba(0,0,0,0.1);
+      left: 50%;
+      margin-left: -120px;
+      margin-top: 20px;
+
+      padding: 10px;
+      display: block;
+      font-size: 12px;
+      letter-spacing: 1px;
+      border-radius: 1px;
+      font-family: 'Gotham-Medium';
+      width: 240px;
+      &:hover {
+        cursor: pointer;
+        border-color: #c6c6c6;
+        -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
+        box-shadow: 0 1px 0 rgba(0,0,0,.15);
+        background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+      }
+    }
     .search-form {
       margin-top: 20px;
 
@@ -125,56 +150,41 @@ body {
         border: 1px solid #656262 !important;
         border-top: 1px solid #c92228 !important;
       }
-      #bottominfo-box {
-        margin: 0px auto;
-        width: 580px;
-        background: @retroredlight;
-        border: 1px solid #ccc;
-        border-top-width: 0px;
-        border-radius: 4px;
-        border-top-right-radius: 0px;
-        border-top-left-radius: 0px;
-        padding: 0 20px;
-        padding-bottom: 10px;
 
-
-        .checkbox {
-          display: inline-block;
-          margin-top: 13px;
-          color: #423f3d;
-          transition: all 0.2s ease-in;
-        }
-        .checkbox-label {
-          display: inline-block;
+      #email-section, #query-zip-section {
+        .message {
           color: white;
           font-family: 'Gotham-Medium';
           font-size: 12px;
           transition: all 0.2s ease-in;
+          height: 25px;
+          line-height: 33px;
         }
-      }
-      .simple-button {
-        position: absolute;
-        background: #FDFDFD;
-        color: @retrored;
-        border: 2px solid #EB5858;
-        border-color: rgba(0,0,0,0.1);
-        left: 50%;
-        margin-left: -120px;
-        margin-top: 20px;
+        .bottominfo-box {
+          margin: 0px auto;
+          width: 580px;
+          background: @retroredlight;
+          border: 1px solid #ccc;
+          border-top-width: 0px;
+          border-radius: 4px;
+          border-top-right-radius: 0px;
+          border-top-left-radius: 0px;
+          padding: 0 20px;
+          padding-bottom: 10px;
 
-        padding: 10px;
-        display: block;
-        font-size: 12px;
-        letter-spacing: 1px;
-        border-radius: 1px;
-        font-family: 'Gotham-Medium';
-        width: 240px;
-        &:hover {
-          cursor: pointer;
-          border-color: #c6c6c6;
-          -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
-          box-shadow: 0 1px 0 rgba(0,0,0,.15);
-          background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
+          .checkbox {
+            display: inline-block;
+            margin-top: 13px;
+            color: #423f3d;
+            transition: all 0.2s ease-in;
+          }
+          .checkbox-label {
+            display: inline-block;
+            color: white;
+            font-family: 'Gotham-Medium';
+            font-size: 12px;
+            transition: all 0.2s ease-in;
+          }
         }
       }
     }
