Now sends an email request to me when a new query is submitted

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -265,7 +265,7 @@ body {
 #wrap #search-box #logo {
   font-family: 'Gotham-Bold';
   font-size: 32px;
-  color: #c92228;
+  color: #e0615e;
 }
 #wrap #search-box .simple-button {
   position: absolute;
@@ -275,14 +275,14 @@ body {
   border-color: rgba(0, 0, 0, 0.1);
   left: 50%;
   margin-left: -120px;
-  margin-top: 20px;
+  margin-top: 100px;
   padding: 10px;
   display: block;
   font-size: 12px;
   letter-spacing: 1px;
   border-radius: 1px;
   font-family: 'Gotham-Medium';
-  width: 240px;
+  width: 260px;
 }
 #wrap #search-box .simple-button:hover {
   cursor: pointer;
@@ -298,9 +298,8 @@ body {
 #wrap #search-box .search-form #emailbox,
 #wrap #search-box .search-form #zipbox {
   display: inline-block;
-  width: 600px;
+  width: 700px;
   margin: 0 auto;
-  border: 1px solid #656262;
   -webkit-background-clip: padding-box;
   background-clip: padding-box;
   outline: none;
@@ -322,11 +321,11 @@ body {
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
   margin-left: -147px;
-  border-left-color: #afa9a5;
+  border-color: #afa9a5;
   border-width: 0px;
+  border-left-width: 1px;
   text-indent: 15px;
   outline: 0;
-  display: none;
 }
 #wrap #search-box .search-form .zipbox-label {
   font-size: 10px;
@@ -336,7 +335,6 @@ body {
   position: absolute;
   margin-left: -135px;
   margin-top: 7px;
-  display: none;
 }
 #wrap #search-box .search-form #searchbox {
   background-image: url(http://www.levenmetwater.nl/static/global/images/icon-search.png);
@@ -351,6 +349,13 @@ body {
   border: 1px solid #656262 !important;
   border-top: 1px solid #c92228 !important;
 }
+#wrap #search-box .search-form #email-section,
+#wrap #search-box .search-form #query-zip-section {
+  position: absolute;
+  z-index: 0px;
+  left: 50%;
+  margin-left: -350px;
+}
 #wrap #search-box .search-form #email-section .message,
 #wrap #search-box .search-form #query-zip-section .message {
   color: white;
@@ -363,7 +368,7 @@ body {
 #wrap #search-box .search-form #email-section .bottominfo-box,
 #wrap #search-box .search-form #query-zip-section .bottominfo-box {
   margin: 0px auto;
-  width: 580px;
+  width: 680px;
   background: #e47673;
   border: 1px solid #ccc;
   border-top-width: 0px;
