--- a/views/index.erb
+++ b/views/index.erb
@@ -31,7 +31,7 @@
             </div>
 
             <div class="bottominfo-box message">
-              Find things in meatspace.
+              Find things nearby and in-stock.
             </div>
 
           </div>
