--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -274,7 +274,7 @@ body {
   border: 2px solid #EB5858;
   border-color: rgba(0, 0, 0, 0.1);
   left: 50%;
-  margin-left: -120px;
+  margin-left: -160px;
   margin-top: 100px;
   padding: 10px;
   display: block;
@@ -282,7 +282,7 @@ body {
   letter-spacing: 1px;
   border-radius: 1px;
   font-family: 'Gotham-Medium';
-  width: 260px;
+  width: 320px;
 }
 #wrap #search-box .simple-button:hover {
   cursor: pointer;
@@ -338,9 +338,6 @@ body {
 }
 #wrap #search-box .search-form #searchbox {
   background-image: url(http://www.levenmetwater.nl/static/global/images/icon-search.png);
-  border-bottom-width: 0px;
-  border-bottom-right-radius: 0px;
-  border-bottom-left-radius: 0px;
 }
 #wrap #search-box .search-form #emailbox {
   background-image: url(http://png-5.findicons.com/files/icons/2566/horizon/16/mail.png);
@@ -358,7 +355,7 @@ body {
 }
 #wrap #search-box .search-form #email-section .message,
 #wrap #search-box .search-form #query-zip-section .message {
-  color: white;
+  color: #e0615e;
   font-family: 'Gotham-Medium';
   font-size: 12px;
   transition: all 0.2s ease-in;
@@ -369,29 +366,10 @@ body {
 #wrap #search-box .search-form #query-zip-section .bottominfo-box {
   margin: 0px auto;
   width: 680px;
-  background: #e47673;
-  border: 1px solid #ccc;
-  border-top-width: 0px;
-  border-radius: 4px;
   border-top-right-radius: 0px;
   border-top-left-radius: 0px;
   padding: 0 20px;
   padding-bottom: 10px;
-}
-#wrap #search-box .search-form #email-section .bottominfo-box .checkbox,
-#wrap #search-box .search-form #query-zip-section .bottominfo-box .checkbox {
-  display: inline-block;
-  margin-top: 13px;
-  color: #423f3d;
-  transition: all 0.2s ease-in;
-}
-#wrap #search-box .search-form #email-section .bottominfo-box .checkbox-label,
-#wrap #search-box .search-form #query-zip-section .bottominfo-box .checkbox-label {
-  display: inline-block;
-  color: white;
-  font-family: 'Gotham-Medium';
-  font-size: 12px;
-  transition: all 0.2s ease-in;
 }
 /* #################
 ####################
