add freebie logic

--- a/views/freebie_recv.erb
+++ b/views/freebie_recv.erb
@@ -6,15 +6,9 @@
   <meta name="description" content="Moonsearch" />
 </head>
 <body>
-Hi there! We just received a new request.
+Hi there! <%= from %> just used Moonsearch to find a product and thought you might like it too.
 <br/><br/>
-Email of submitter: <%= submitter_email %>
-<br/>
-Zip of submitter: <%= zip %>
-<br/>
-Query of submitter: <%= query %>
-<br/><br/>
-Moonsearch Love!
+Use this link for a free search: <a href=<%= link %>>Moonsearch!</a>
 <br/>
 Moonsearch HQ — California
 </body>
