--- a/views/freebie_send.erb
+++ b/views/freebie_send.erb
@@ -6,15 +6,9 @@
   <meta name="description" content="Moonsearch" />
 </head>
 <body>
-Hi there! We just received a new request.
+Hi there! Thanks for inviting a friend to use Moonsearch. We appreciate it so much, we're giving you a free search too!
 <br/><br/>
-Email of submitter: <%= submitter_email %>
-<br/>
-Zip of submitter: <%= zip %>
-<br/>
-Query of submitter: <%= query %>
-<br/><br/>
-Moonsearch Love!
+Use this link to claim it: <a href=<%= link %>>Moonsearch!</a>
 <br/>
 Moonsearch HQ — California
 </body>
