POST now happens in background and presents user with thank you message

--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -265,9 +265,20 @@ body {
 #wrap #search-box #logo {
   font-family: 'Gotham-Bold';
   font-size: 32px;
-  color: #e0615e;
+  color: #e47673;
 }
-#wrap #search-box .simple-button {
+#wrap #search-box #submitted-message {
+  display: none;
+  position: absolute;
+  left: 50%;
+  margin-left: -200px;
+  width: 400px;
+  font-size: 16px;
+  font-family: 'Gotham-Bold';
+  color: #423f3d;
+  margin-top: 40px;
+}
+#wrap #search-box #query-button {
   position: absolute;
   background: #FDFDFD;
   color: #e0615e;
@@ -284,19 +295,19 @@ body {
   font-family: 'Gotham-Medium';
   width: 320px;
 }
-#wrap #search-box .simple-button:hover {
+#wrap #search-box #query-button:hover {
   cursor: pointer;
   border-color: #c6c6c6;
   -webkit-box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
   box-shadow: 0 1px 0 rgba(0, 0, 0, 0.15);
   background: -webkit-linear-gradient(top, #f8f8f8, #f1f1f1);
 }
-#wrap #search-box .search-form {
+#wrap #search-box #search-form {
   margin-top: 20px;
 }
-#wrap #search-box .search-form #searchbox,
-#wrap #search-box .search-form #emailbox,
-#wrap #search-box .search-form #zipbox {
+#wrap #search-box #search-form #searchbox,
+#wrap #search-box #search-form #emailbox,
+#wrap #search-box #search-form #zipbox {
   display: inline-block;
   width: 700px;
   margin: 0 auto;
@@ -316,7 +327,7 @@ body {
   border: 1px solid #ccc;
   text-indent: 30px;
 }
-#wrap #search-box .search-form #zipbox {
+#wrap #search-box #search-form #zipbox {
   width: 120px;
   border-bottom-left-radius: 0px;
   border-top-left-radius: 0px;
@@ -327,7 +338,7 @@ body {
   text-indent: 15px;
   outline: 0;
 }
-#wrap #search-box .search-form .zipbox-label {
+#wrap #search-box #search-form .zipbox-label {
   font-size: 10px;
   text-transform: uppercase;
   color: #afa9a5;
@@ -336,25 +347,25 @@ body {
   margin-left: -135px;
   margin-top: 7px;
 }
-#wrap #search-box .search-form #searchbox {
+#wrap #search-box #search-form #searchbox {
   background-image: url(http://www.levenmetwater.nl/static/global/images/icon-search.png);
 }
-#wrap #search-box .search-form #emailbox {
+#wrap #search-box #search-form #emailbox {
   background-image: url(http://png-5.findicons.com/files/icons/2566/horizon/16/mail.png);
 }
-#wrap #search-box .search-form .focus-border {
+#wrap #search-box #search-form .focus-border {
   border: 1px solid #656262 !important;
   border-top: 1px solid #c92228 !important;
 }
-#wrap #search-box .search-form #email-section,
-#wrap #search-box .search-form #query-zip-section {
+#wrap #search-box #search-form #email-section,
+#wrap #search-box #search-form #query-zip-section {
   position: absolute;
   z-index: 0px;
   left: 50%;
   margin-left: -350px;
 }
-#wrap #search-box .search-form #email-section .message,
-#wrap #search-box .search-form #query-zip-section .message {
+#wrap #search-box #search-form #email-section .message,
+#wrap #search-box #search-form #query-zip-section .message {
   color: #e0615e;
   font-family: 'Gotham-Medium';
   font-size: 12px;
@@ -362,8 +373,8 @@ body {
   height: 25px;
   line-height: 33px;
 }
-#wrap #search-box .search-form #email-section .bottominfo-box,
-#wrap #search-box .search-form #query-zip-section .bottominfo-box {
+#wrap #search-box #search-form #email-section .bottominfo-box,
+#wrap #search-box #search-form #query-zip-section .bottominfo-box {
   margin: 0px auto;
   width: 680px;
   border-top-right-radius: 0px;
