--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -66,7 +66,18 @@ body {
       font-size: 32px;
       color: @retroredlight;
     }
-    .simple-button {
+    #submitted-message {
+      display: none;
+      position: absolute;
+      left: 50%;
+      margin-left:  -200px;
+      width: 400px;
+      font-size: 16px;
+      font-family: 'Gotham-Bold';
+      color: @retroblack;
+      margin-top: 40px;
+    }
+    #query-button {
       position: absolute;
       background: #FDFDFD;
       color: @retrored;
@@ -91,7 +102,7 @@ body {
         background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
       }
     }
-    .search-form {
+    #search-form {
       margin-top: 20px;
 
       #searchbox, #emailbox, #zipbox {
