--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -49,7 +49,7 @@ body {
 #wrap {
   background-color: #f4f5e6;
   #inner-wrap {
-    background-color: #f6eac2;
+    background-color: @retrogold;
     position: absolute;
     margin: auto;
     top: 30px;
@@ -66,41 +66,55 @@ body {
       font-size: 32px;
       color: @retroredlight;
     }
-    #submitted-message {
-      display: none;
-      position: absolute;
-      left: 50%;
-      margin-left:  -200px;
-      width: 400px;
-      font-size: 16px;
-      font-family: 'Gotham-Bold';
-      color: @retroblack;
-      margin-top: 40px;
+    #pay {
+      #submitted-message {
+        position: absolute;
+        left: 50%;
+        margin-left:  -350px;
+        width: 700px;
+        font-size: 16px;
+        font-family: 'Gotham-Bold';
+        color: @retroblack;
+        margin-top: 250px;
+      }
+      #beaver {
+        position: absolute;
+        background-image: url('../images/beaver.png');
+        background-size: 50% 50%;
+        background-repeat: no-repeat;
+        width: 320px;
+        height: 361px;
+        left: 50%;
+        margin-left:  -80px;
+      }
     }
-    #query-button {
+    #query-button, #pay-button {
       position: absolute;
-      background: #FDFDFD;
-      color: @retrored;
-      border: 2px solid #EB5858;
-      border-color: rgba(0,0,0,0.1);
+      background: -webkit-linear-gradient(top,white,#F8F8F8);
+      color: @retroredlight;
+      border: 1px solid #EB5858;
+      border-color: rgba(228,118,115,0.45);
       left: 50%;
-      margin-left: -160px;
-      margin-top: 100px;
+      margin-left: -100px;
+      margin-top: 192px;
 
       padding: 10px;
       display: block;
       font-size: 12px;
       letter-spacing: 1px;
-      border-radius: 1px;
+      border-radius: 53px;
       font-family: 'Gotham-Medium';
-      width: 320px;
+      width: 200px;
       &:hover {
         cursor: pointer;
-        border-color: #c6c6c6;
+        border-color: rgba(228,118,115,0.65);
+        border-width: 1px;
         -webkit-box-shadow: 0 1px 0 rgba(0,0,0,.15);
         box-shadow: 0 1px 0 rgba(0,0,0,.15);
-        background: -webkit-linear-gradient(top,#f8f8f8,#f1f1f1);
       }
+    }
+    #query-button {
+      margin-top: 115px;
     }
     #search-form {
       margin-top: 20px;
@@ -133,7 +147,7 @@ body {
         border-color: @retrogrey;
         border-width:0px;
         border-left-width: 1px;
-        text-indent: 15px;
+        text-indent: 20px;
         outline: 0;
       }
       .zipbox-label {
@@ -175,7 +189,7 @@ body {
           width: 680px;
           border-top-right-radius: 0px;
           border-top-left-radius: 0px;
-          padding: 0 20px;
+          padding: 5px 20px;
           padding-bottom: 10px;
         }
       }
