--- a/public/styles/style.less
+++ b/public/styles/style.less
@@ -66,7 +66,7 @@ body {
       font-size: 32px;
       color: @retroredlight;
     }
-    #pay {
+    #confirm-screen {
       #submitted-message {
         position: absolute;
         left: 50%;
@@ -76,16 +76,6 @@ body {
         font-family: 'Gotham-Bold';
         color: @retroblack;
         margin-top: 250px;
-      }
-      #beaver {
-        position: absolute;
-        background-image: url('../images/beaver.png');
-        background-size: 50% 50%;
-        background-repeat: no-repeat;
-        width: 320px;
-        height: 361px;
-        left: 50%;
-        margin-left:  -80px;
       }
     }
     #query-button, #pay-button {
