--- a/views/index.erb
+++ b/views/index.erb
@@ -45,13 +45,11 @@
         </form>
         <!-- End query form -->
 
-        <div id="query-button" onClick="transitionToPay();" title="ENGAGE SUPERGALACTIC SEARCH POWERS">Find it!</div>
+        <div id="query-button" onClick="transitionToConfirm();" title="ENGAGE SUPERGALACTIC SEARCH POWERS">Find it!</div>
 
-        <div id="pay" style="display:none">
+        <div id="confirm-screen" style="display:none">
 
           <script src="https://checkout.stripe.com/checkout.js"></script>
-
-          <div id="beaver"></div>
 
           <div id="pay-button" onClick="" title="Little known fact: It took beavers just 108 days to build the CN tower.">Pay</div>
 
